--- a/package.json
+++ b/package.json
@@ -11,24 +11,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
-    "axios": "^0.27.2",
+    "axios": "0.23.0",
     "expo": "~44.0.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-image-picker": "^4.8.4",
     "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.2",
     "react-router-native": "^6.3.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
     "yup": "^0.32.11"
   },
